# automacao-backups-foundry

./: .env_template  .gitignore  README.md  args_file_template.env  pyproject.toml  requirements.txt
automacao_backups_foundry/: main.py
foundry_backup_automation/: main.py
