[tool.poetry]
name = "automacao-backups-foundry"
version = "0.1.0"
description = ""
authors = ["Joel Júnior <joel.j@escolar.ifrn.edu.br>"]
readme = "README.md"
packages = [{include = "automacao_backups_foundry"}]

[tool.poetry.dependencies]
python = "^3.10"
paramiko = "^3.2.0"
python-decouple = "^3.8"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"


[tool.poetry.group.development.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
